# jni-bindgen

./: .gitignore  .travis.yml  Cargo.toml  Readme.md  rust-toolchain
.cargo/: config
.github/: dependabot.yml
.github/workflows/: rust.yml
bindgen-jni/: Cargo.toml
bindgen-jni/src/: lib.rs  main.rs
bindgen-jni/src/class_file_visitor/: io_ext.rs  version.rs
bindgen-jni/src/config/: runtime.rs  toml.rs
bindgen-jni/src/emit_rust/: modules.rs  preamble-contents.rs  structs.rs
bindgen-jni/src/gather_java/: class.rs  class_constants.rs
bindgen-jni/src/gather_java/class_constants/: class_ref.rs  method_ref.rs  name_and_type_ref.rs
bindgen-jni/src/identifiers/: method_mangling_style.rs
bindgen-jni/src/run/: run.rs
example-jni-java/: Cargo.toml  build.rs  test.cmd
example-jni-java/java/: Adder.java  Program.java  RustJniGlueAdder.java  RustJniSysAdder.java
example-jni-java/rust/: jni_glue_adder.rs  jni_sys_adder.rs  lib.rs
example-jni-java/src/: JavaAdder.java  RustJniGlueAdder.java  RustJniGlueAdder.rs  RustJniSysAdder.java  RustJniSysAdder.rs  lib.rs  main.rs
example_android_studio/: .gitignore
example_android_studio/app/: build.gradle
example_android_studio/app/src/main/: AndroidManifest.xml
example_android_studio/app/src/main/java/: MainActivity.java
example_android_studio/app/src/main/res/values/: strings.xml
example_android_studio/gradle/wrapper/: gradle-wrapper.properties
example_android_studio/rust/: Cargo.toml
example_android_studio/rust/src/: lib.rs
examples/: dump-android-sdk.rs  emit-android-sdk.rs
examples/android-28-sys/: .gitignore  Cargo.toml  bindgen-jni.toml  build.rs  jni-bindgen.toml
examples/android-28-sys/src/: lib.rs
examples/generated-android-sdk/: main.rs
jar-parser/: Cargo.toml
jar-parser/src/: attributes.rs  class.rs  constants.rs  field.rs  io.rs  lib.rs  method.rs  version.rs
jni-android-sys/: .gitignore  Cargo.toml  Cargo.toml.template  Readme.md  build.rs  jni-bindgen.toml
jni-android-sys-gen/: Cargo.toml  cli.yml
jni-android-sys-gen/src/: main.rs
jni-android-sys/examples/android-studio/basic/: .gitignore  build.gradle
jni-android-sys/examples/android-studio/basic/app/: build.gradle
jni-android-sys/examples/android-studio/basic/app/src/androidTest/java/com/maulingmonkey/jni_android_sys/examples/basic/: ExampleInstrumentedTest.java
jni-android-sys/examples/android-studio/basic/app/src/main/: AndroidManifest.xml
jni-android-sys/examples/android-studio/basic/app/src/main/java/com/maulingmonkey/jni_android_sys/examples/basic/: MainActivity.java
jni-android-sys/examples/android-studio/basic/app/src/main/res/values/: strings.xml
jni-android-sys/examples/android-studio/basic/app/src/test/java/com/maulingmonkey/jni_android_sys/examples/basic/: ExampleUnitTest.java
jni-android-sys/examples/android-studio/basic/rust/: Cargo.toml
jni-android-sys/examples/android-studio/basic/rust/cfg/windows-android/.cargo/: config
jni-android-sys/examples/android-studio/basic/rust/src/: lib.rs
jni-android-sys/src/: lib.rs
jni-android-sys/src/extras/: strings.rs  throwable.rs
jni-bindgen/: Cargo.toml  cli.yml
jni-bindgen-reflection/: Cargo.toml
jni-bindgen-reflection/src/: attributes.rs  class.rs  constants.rs  field.rs  io.rs  method.rs
jni-bindgen-reflection/tests/: test-src.rs
jni-bindgen/src/: lib.rs  macros.rs  main.rs
jni-bindgen/src/android/: _android.rs  api_level_range.rs
jni-bindgen/src/ast/: mod.rs
jni-bindgen/src/class_file_visitor/: constant.rs  field.rs  mod.rs
jni-bindgen/src/config/: _config.rs  runtime.rs  toml.rs
jni-bindgen/src/emit_rust/: _emit_rust.rs  context.rs  fields.rs  known_docs_url.rs  methods.rs  modules.rs  preamble-contents.rs  structs.rs
jni-bindgen/src/gather_java/: class.rs  class_constants.rs  field_ref.rs
jni-bindgen/src/identifiers/: _identifiers.rs  field_mangling_style.rs  jni_descriptor.rs  jni_field.rs  jni_path_iter.rs  method_mangling_style.rs  rust_identifier.rs
jni-bindgen/src/java/: attributes.rs  class.rs  constants.rs  field.rs  io.rs  method.rs  mod.rs  sdk.rs
jni-bindgen/src/mappers/: class_to_struct.rs  mod.rs
jni-bindgen/src/run/: _run.rs  run.rs
jni-bindgen/src/rust/: mod.rs
jni-bindgen/src/util/: _util.rs  dedupe_file_set.rs  difference.rs  generated_file.rs  io_context.rs  progress.rs
jni-glue/: Cargo.toml
jni-glue-macros/: Cargo.toml
jni-glue-macros/src/: argument_and_return.rs  bindgen.rs  context.rs  escape.rs  expect.rs  lib.rs  macros.rs  parsing1.rs  parsing2.rs  skip_condition.rs
jni-glue-macros/src/context/: on_import.rs  on_root.rs  on_unsafe_impl_class.rs
jni-glue/src/: __bindgen_jni.rs  __jni_bindgen.rs  array.rs  as_jvalue.rs  as_local.rs  as_valid_jobject_and_env.rs  env.rs  gen_vm.rs  jchar_.rs  jni_type.rs  lib.rs  object_and_env.rs  result.rs  string_chars.rs  throw.rs  throwable_type.rs  vm.rs
jni-glue/src/backends/: TODO.md  single_vm_backend.rs
jni-glue/src/refs/: TODO.md  argument.rs  global.rs  local.rs  ref_.rs
jni-jdk-sys/: Cargo.toml.template  jni-bindgen.toml
jni-jdk-sys/src/: lib.rs
jreflection/: Cargo.toml  LICENSE-MIT
jreflection/src/: attributes.rs  lib.rs  src.rs
jreflection/tests/: test-src.rs
scripts/: autoconfig.cmd  clean.cmd  dependencies.cmd  install.cmd  install.sh  publish.cmd  test.cmd  test.sh  update-reference-src.cmd
scripts/linux-android/.cargo/: config
src/: emit_rust.rs  gather_java.rs  identifiers.rs  lib.rs
src/class_file_visitor/: attribute.rs  constant.rs  field.rs  header.rs  method.rs  mod.rs  version.rs
src/config/: runtime.rs  toml.rs
src/emit_rust/: context.rs  known_docs_url.rs  modules.rs  preamble-contents.rs  preamble.rs  structs.rs
src/gather_java/: class.rs  class_constants.rs  method_ref.rs
src/gather_java/class_constants/: field_ref.rs  interface_method_ref.rs
src/identifiers/: jni_descriptor.rs  jni_field.rs  rust_identifier.rs
src/run/: run.rs
src/visitors/: noop.rs  print.rs
