[package]
name = "bindjava"
version = "0.1.0"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.1.0"
zip = "0.5.2"

[dev-dependencies]
bugsalot = "0.1.4"
jni-sys = "0.3.0"
