[package]
name = "bindgen-jni"
version = "0.0.0"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"
description = "Code generator for binding to JVM APIs from Rust"
# documentation = "https://docs.rs/bindgen-jni/"
repository = "https://github.com/MaulingMonkey/bindgen-jni"
readme = "README.md"
keywords = ["jvm", "jni", "bindgen", "android"]
categories = ["development-tools::ffi"]
license = "MIT OR Apache-2.0"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE-MIT", "/LICENSE-APACHE", "/Readme.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.1.0"
zip = "0.5.2"

[dev-dependencies]
bugsalot = "0.1.4"
jni-sys = "0.3.0"
