[package]
name = "bindgen-jni"
version = "0.0.1"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"
description = "Renamed to jni-bindgen.  Code generator for binding to JVM APIs from Rust"
license = "MIT OR Apache-2.0"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE-MIT", "/LICENSE-APACHE", "/Readme.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.1.0"
zip = "0.5.2"

[dev-dependencies]
bugsalot = "0.1.4"
jni-sys = "0.3.0"

[badges]
maintenance = { status = "deprecated" }
