[package]
name = "bindgen-jni"
version = "0.0.0"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"
description = "Code generator for binding to JVM APIs from Rust"
documentation = "https://docs.rs/bindgen-jni/"
repository = "https://github.com/MaulingMonkey/bindgen-jni"
readme = "README.md"
keywords = ["jvm", "jni", "bindgen", "android"]
categories = ["development-tools::ffi"]
license = "MIT OR Apache-2.0"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE-MIT", "/LICENSE-APACHE", "/Readme.md"]
autoexamples = false

[dependencies]
bitflags = "1.1.0"
bugsalot = "0.1.4"
toml = "0.5.1"
serde = "1.0.98"
serde_derive = "1.0.98"
zip = "0.5.2"

[dev-dependencies]
jni-sys = "0.3.0"
