# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "example-jni-java"
version = "0.0.0"
publish = false
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"

[dependencies]
jni-sys         = "0.3"
jni-glue        = { version = "0.0.9", path = "../jni-glue"      }
jerk-test       = { version = "0.1.0", path = "../../jerk/jerk-test" }

[build-dependencies]
jerk-build      = { version = "0.1.0", path = "../../jerk/jerk-build" }

[dev-dependencies]
jerk-test       = { version = "0.1.0", path = "../../jerk/jerk-test" }
