[package]
name = "jar-parser"
version = "0.0.0"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"
description = "Parser for Java .jar and .class files"
documentation = "https://docs.rs/jar-parser/"
repository = "https://github.com/MaulingMonkey/jni-bindgen"
keywords = ["jvm", "jar", "java", "bindgen"]
categories = [] # XXX: ???
license = "MIT OR Apache-2.0"
include = ["/src/**/*", "/Cargo.toml", "../LICENSE-MIT", "../LICENSE-APACHE", "../Readme.md"]


[dependencies]
bitflags = "1.1.0"
bugsalot = "0.1.4"
zip = "0.5.2"
