[package]
name = "jni-android-sys-gen"
version = "0.0.9"
publish = false
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"
description = "Autogenerate jni-android-sys, glue code for access Android JVM APIs from Rust"
repository = "https://github.com/MaulingMonkey/jni-bindgen"
license = "MIT OR Apache-2.0"

[dependencies]
bugsalot    = { version = "0.2.0" }
jni-glue    = { version = "=0.0.9", path = "../jni-glue" }
jni-bindgen = { version = "=0.0.9", path = "../jni-bindgen" }
clap        = { version = "2.33.0", features = ["yaml"] }
