[package]
name = "jni-bindgen"
version = "0.0.7"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"
description = "Code generator for binding to JVM APIs from Rust"
documentation = "https://docs.rs/jni-bindgen/"
repository = "https://github.com/MaulingMonkey/jni-bindgen"
keywords = ["jvm", "jni", "bindgen", "android"]
categories = ["development-tools::ffi"]
license = "MIT OR Apache-2.0"
include = ["/src/**/*", "/Cargo.toml", "../LICENSE-MIT", "../LICENSE-APACHE", "../Readme.md"]


[dependencies]
bitflags = "1.1.0"
bugsalot = "0.1.4"
tempfile = "3.1.0"
toml = "0.5.1"
serde = "1.0.98"
serde_derive = "1.0.98"
zip = "0.5.2"

[dev-dependencies]
jni-sys = "0.3.0"
