[package]
name = "jni-bindgen"
version = "0.0.10"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"
description = "Code generator for binding to JVM APIs from Rust"
documentation = "https://docs.rs/jni-bindgen/"
repository = "https://github.com/MaulingMonkey/jni-bindgen"
keywords = ["jvm", "jni", "bindgen", "android"]
categories = ["development-tools::ffi"]
license = "MIT OR Apache-2.0"
include = ["/**/*.rs", "/Cargo.toml", "/cli.yml", "/LICENSE-MIT", "/LICENSE-APACHE"]


[dependencies]
jreflection             = "0.0.11"
jni-glue                = { version = "=0.0.10", path = "../jni-glue" }
clap                    = { version = "3", features = ["yaml"] }
bitflags                = "1.1.0"
bugsalot                = "0.2.0"
lazy_static             = "1.3.0"
serde                   = "1.0.98"
serde_derive            = "1.0.98"
toml                    = "0.7.3"
zip                     = "0.5.2"

[dev-dependencies]
jni-sys                 = "0.3.0"
