[package]
name = "jni-glue"
version = "0.0.2"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"
description = "Manually written glue code to accompany the jni-bindgen code generator for binding to JVM APIs from Rust"
documentation = "https://docs.rs/jni-bindgen/"
repository = "https://github.com/MaulingMonkey/jni-bindgen"
keywords = ["jvm", "jni", "bindgen", "android"]
categories = ["external-ffi-bindings"]
license = "MIT OR Apache-2.0"
include = ["/src/**/*", "/Cargo.toml", "../LICENSE-MIT", "../LICENSE-APACHE", "../Readme.md"]


[dependencies]
jni-sys = "0.3.0"
lazy_static = "1"

[features]
default = []

# You should use this feature *only* if you need to define JNI_OnLoad / JNI_OnUnload yourself, for example because
# you're using multiple conflicting versions of jni-glue.  In this case, you are responsible for manually defining
# JNI_OnLoad / JNI_OnUnload, and calling jni_glue::on_load / jni_glue::on_unload yourself.  Failure to do so may
# introduce soundness issues due to using dangling VM instances!
unsafe-manual-jni-load-unload = []
