[package]
name = "android-28-sys"
version = "0.0.0"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
jni-sys = "0.3.0"
lazy_static = "1" # To be moved into JNI glue layer once able.

[build-dependencies]
bindgen-jni = { path = "../.." }

[features]
default = []
gen = []
